cluster/terraform_gateway_api/config/values/k8s-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  namespace: gateway-api
  annotations: {
    meta.helm.sh/release-namespace: "gateway-api",
    meta.helm.sh/release-name: "traefik",
  }
  labels: {
    app.kubernetes.io/managed-by: "Helm"
  }
spec:
  controllerName: traefik.io/gateway-controller
