cluster/terraform_gateway_api/config/values/welcome-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: welcome-app-route
  namespace: infra
spec:
  parentRefs:
    - name: development-gateway-api
      namespace: gateway-api
      sectionName: websecure
  hostnames:
    - "www.gatewayapicluster3.development.teacherservices.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: welcome-app
          port: 80
